HAWKULAR-864 add percent number in donut graphs. Fix labels, so it is not needed to wait for refresh after inserting first label. Remove number of results in server list. Change message when no results are filtered. Fix wrong number of visible results, when filtering (filtering now on javascript not in HTML).

--- a/console/src/main/scripts/plugins/metrics/less/metrics.less
+++ b/console/src/main/scripts/plugins/metrics/less/metrics.less
@@ -651,6 +651,13 @@ a:hover {
   }
 }
 
+.hk-donut-chart {
+  .c3-chart-arcs-title {
+    dominant-baseline: central;
+    font-size: 1.4em;
+  }
+}
+
 
 // Control Actions Bar
 
